# hubris

./: Cargo.toml  rust-toolchain.toml
app/demo-pinetime/: Cargo.toml
app/demo-stm32h7-nucleo/: app-h753.toml
app/gemini-bu/: app.toml
app/gemini-bu-rot/: app.toml
app/gimlet/: rev-a.toml  rev-b.toml
app/gimlet-rot/: app.toml
app/gimletlet/: app-mgmt.toml  app-sidecar-emulator.toml  app.toml
app/lpc55xpresso/: app.toml
app/psc/: app.toml
app/sidecar/: app.toml
chips/: nRF52832.toml
drv/ecp5/: Cargo.toml
drv/ecp5/src/: lib.rs  spi.rs  types.rs
drv/fpga-api/src/: lib.rs
drv/fpga-devices/src/: ecp5.rs  lib.rs
drv/fpga-server/src/: main.rs
drv/sidecar-mainboard-controller-api/: sidecar_mainboard_controller.bit
drv/sidecar-mainboard-controller-api/src/: lib.rs  tofino2.rs
drv/sidecar-seq-api/src/: lib.rs
drv/sidecar-seq-server/: Cargo.toml
drv/sidecar-seq-server/src/: main.rs
drv/st7789-common/: Cargo.toml
drv/st7789-common/src/: lib.rs
drv/st7789-server/: Cargo.toml  build.rs
drv/st7789-server/src/: main.rs
idl/: fpga-debug.idol  fpga.idol  sidecar-seq.idol  st7789.idol
lib/gnarle/src/: lib.rs
stage0/src/: main.rs
sys/kern/src/: lib.rs
sys/kern/src/arch/: arm_m.rs
sys/userlib/src/: lib.rs
task/ecp5-client/: Cargo.toml
task/ecp5-client/src/: main.rs
task/fpga/: Cargo.toml  build.rs
task/fpga-debug/: Cargo.toml  build.rs
task/fpga-debug/src/: main.rs
task/fpga/src/: main.rs
task/hiffy/: Cargo.toml
task/hiffy/src/: common.rs  stm32h7.rs
task/ping/src/: main.rs
test/test-assist/src/: main.rs
test/test-suite/src/: main.rs
test/tests-gemini-bu-rot/: app.toml
test/tests-lpc55xpresso/: app.toml
