[package]
name = "drv-ecp5"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = {path = "../../sys/userlib"}
ringbuf = {path = "../../lib/ringbuf"}
hubris-num-tasks = {path = "../../sys/num-tasks", features = ["task-enum"]}
drv-spi-api = {path = "../../drv/spi-api"}
drv-stm32xx-sys-api = {path = "../stm32xx-sys-api"}
cfg-if = "1"
bitfield = "0.13"
zerocopy = "0.6.1"
num-traits = { version = "0.2.12", default-features = false }

[features]

[build-dependencies]
build-util = {path = "../../build/util"}
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[lib]
test = false
bench = false
