[package]
name = "task-fpga-debug"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
num-traits = { version = "0.2.12", default-features = false }
zerocopy = "0.6.1"

userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
ringbuf = {path = "../../lib/ringbuf" }
idol-runtime = {git = "https://github.com/oxidecomputer/idolatry.git"}
drv-fpga-api = {path = "../../drv/fpga-api" }

[features]

[build-dependencies]
build-util = {path = "../../build/util"}
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}

# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv7em-none-eabihf"

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-fpga-debug"
test = false
bench = false
