[package]
name = "task-fpga"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
num-traits = { version = "0.2.12", default-features = false }
zerocopy = "0.6.1"

hubris-num-tasks = {path = "../../sys/num-tasks", features = ["task-enum"]}
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
ringbuf = {path = "../../lib/ringbuf" }
gnarle = {path = "../../lib/gnarle"}
drv-spi-api = {path = "../../drv/spi-api"}
drv-stm32xx-sys-api = {path = "../../drv/stm32xx-sys-api", features = ["family-stm32h7"]}
idol-runtime = {git = "https://github.com/oxidecomputer/idolatry.git"}
drv-ecp5 = {path = "../../drv/ecp5" }

[features]

[build-dependencies]
build-util = {path = "../../build/util"}
gnarle = {path = "../../lib/gnarle"}
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}

# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv7em-none-eabihf"

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-fpga"
test = false
bench = false
